--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
+    "@types/runes": "^0.4.1",
     "memoize-one": "^5.1.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-use-dimensions": "^1.2.1",
+    "runes": "^0.4.3",
     "typescript": "^3.9.6"
   },
   "scripts": {
